--- a/_config.yml
+++ b/_config.yml
@@ -145,7 +145,7 @@ collections:
     output: true
     permalink: /:collection/:title/
   projects:
-    output: true
+    output: false
     permalink: /:collection/:title/
 
 announcements:
