--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -20,7 +20,7 @@ github_username: Junaid-Aftab
 # lastfm_id: # your lastfm id
 # lattes_id: # your ID on Lattes (Brazilian Lattes CV)
 # leetcode_id: # your LeetCode id
-linkedin_username: https://www.linkedin.com/in/junaid-aftab/
+linkedin_username: junaid-aftab
 # mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 # medium_username: # your Medium username
 # orcid_id: # your ORCID ID
