--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,13 +7,12 @@ on:
       - main
     paths:
       - "assets/**"
-      - "**/*.bib"
-      - "**/*.html"
-      - "**/*.js"
-      - "**/*.liquid"
+      - "**.bib"
+      - "**.html"
+      - "**.js"
+      - "**.liquid"
       - "**/*.md"
-      - "**/*.yml"
-      - "**/*.yaml"
+      - "**.yml"
       - "Gemfile"
       - "Gemfile.lock"
       - "!.github/workflows/axe.yml"
@@ -36,13 +35,12 @@ on:
       - main
     paths:
       - "assets/**"
-      - "**/*.bib"
-      - "**/*.html"
-      - "**/*.js"
-      - "**/*.liquid"
+      - "**.bib"
+      - "**.html"
+      - "**.js"
+      - "**.liquid"
       - "**/*.md"
-      - "**/*.yml"
-      - "**/*.yaml"
+      - "**.yml"
       - "Gemfile"
       - "Gemfile.lock"
       - "!.github/workflows/axe.yml"
